--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "frontend",
+  "name": "mytudo app",
   "version": "0.0.0",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "ng build",
+    "ng": "ng"
   },
   "private": true,
   "dependencies": {
