--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,9 @@
   "description": "backend of this mean stack app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "test": "npm run lint && node app.js",
+    "lint": "npx eslint app.js --fix"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +19,7 @@
     "mongoose": "^5.9.22"
   },
   "devDependencies": {
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "eslint": "^7.4.0"
   }
 }
