--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "homepage": "https://github.com/Shefuchow/taskmanager#readme",
   "dependencies": {
     "concurrently": "^5.2.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.4.0"
   }
 }
