--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -149,7 +149,7 @@
         "no-loop-func": "warn",
         "no-loss-of-precision": "warn",
         "no-magic-numbers": "off",
-        "no-mixed-operators": "warn",
+        "no-mixed-operators": "off",
         "no-mixed-requires": "warn",
         "no-multi-assign": "warn",
         "no-multi-spaces": "off",
