--- a/api/package.json
+++ b/api/package.json
@@ -4,9 +4,7 @@
   "description": "backend of this mean stack app",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js",
-    "test": "npm run lint && node app.js",
-    "lint": "npx eslint app.js --fix"
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
